syntax = "proto3";

package wallets.v1;

message CreateWalletRequestMessage {
  string user_uuid = 1;
}
