syntax = "proto3";

package wallets.v1;

message DeleteWalletRequestMessage {
  string wallet_uuid = 1;
}
